' Generated by UML Generator
' Encoded: hLDDIyD04BtlhnZmabfJF0SjRHL442mKl8Y7pMPibswoONPIMslzxMwI9ct4huENa7dxvht9cyt8iIGkKYFSKcUv99c2CjAvCJFfk62yLJQRwLU4Sx7G2OBIf0mAeJD6UfOAOMBNi1K0xqeQLHZ9E2MjCEX5aDWYzkIT439sJ59nhGvJiadXgxBlX3KRZ63c7RDv2UHbVziD48R-qT_t11tw6NJ8lP8uH_vYWjfuOksoSksNRxzh_VHDjUA3JyNUo1HhsRRy3-qhc-RMQSOcur0jj4a8imZkjECBZm_X4Z9yWJ6Ht5JWCEYreHqh1B5TeulAXVtH_ngDNY5jPaWhJwb7y2gLHklXa8lydXAaOuS8LbOd7P-AywtPuRHESkll9ckrWrJgB90qTqsOZq-Dkczkhj9Wy3QingfM78Q-sX-9muewS2VTjhs3sZ2imCz1dExn4MQ9_ti-00
' URL: http://www.plantuml.com/plantuml/uml/hLDDIyD04BtlhnZmabfJF0SjRHL442mKl8Y7pMPibswoONPIMslzxMwI9ct4huENa7dxvht9cyt8iIGkKYFSKcUv99c2CjAvCJFfk62yLJQRwLU4Sx7G2OBIf0mAeJD6UfOAOMBNi1K0xqeQLHZ9E2MjCEX5aDWYzkIT439sJ59nhGvJiadXgxBlX3KRZ63c7RDv2UHbVziD48R-qT_t11tw6NJ8lP8uH_vYWjfuOksoSksNRxzh_VHDjUA3JyNUo1HhsRRy3-qhc-RMQSOcur0jj4a8imZkjECBZm_X4Z9yWJ6Ht5JWCEYreHqh1B5TeulAXVtH_ngDNY5jPaWhJwb7y2gLHklXa8lydXAaOuS8LbOd7P-AywtPuRHESkll9ckrWrJgB90qTqsOZq-Dkczkhj9Wy3QingfM78Q-sX-9muewS2VTjhs3sZ2imCz1dExn4MQ9_ti-00
' Generated on: 2025-12-01T12:08:14.442171447

@startuml
skinparam classAttributeIconSize 0
hide circle

interface Box {
  ~calculatePrice(): double
}

abstract class Product {
  #title: String
  #price: double
  --
  +Product(title: String, price: double)
  +getPrice(): double
}

class Book {
  +Book(title: String, price: double)
  +calculatePrice(): double
}

class VideoGame {
  +VideoGame(title: String, price: double)
  +calculatePrice(): double
}

class CompositeBox {
  -children: List<Box> = new ArrayList<>()
  --
  +CompositeBox(boxes: Box)
  +calculatePrice(): double
}

class DeliveryService {
  -box: Box
  --
  +setupOrder(boxes: Box): void
  +calculateOrderPrice(): double
}

class OrderPrice {
  +{static} main(args: String[]): void
}

Product ..|> Box
Book --|> Product
VideoGame --|> Product
CompositeBox ..|> Box
CompositeBox o-- Box
DeliveryService *-- Box
@enduml